FullQa New/src/objects/Platform__c.object
<CustomObject>
    <description>Used as an associated table for the connector object to track the application associated with a given connector</description>
    <fields>
        <fullName>PPM_Manager__c</fullName>
        <formula>PPM__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Platforms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Platform_Notes__c</fullName>
        <label>Platform Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAM_Manager__c</fullName>
        <formula>SAM__r.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAM Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Platforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Platforms</relationshipLabel>
        <relationshipName>Platforms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Platform</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Platform_Notes__c</columns>
        <columns>Vendor__c</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Platform Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>